--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,27 +1,40 @@
 <html>
 
-<body>
-    <div th:fragment="navbar">
-        <!-- Navbar Start-->
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-            <div class="container-fluid d-flex justify-content-between">
-                <a class="navbar-brand" href="/">Biblioteca</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID" aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarID">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" th:href="@{/editoriales}">Editoriales</a>
-                        <a class="nav-link active" aria-current="page" th:href="@{/autores}">Autores</a>
-                        <a class="nav-link active" aria-current="page" th:href="@{/libros}">Libros</a>
-                        <a class="nav-link active" aria-current="page" th:href="@{/clientes}">Clientes</a>
-                        <a class="nav-link active" aria-current="page" th:href="@{/prestamos}">Préstamos</a>
+    <body>
+        <div th:fragment="navbar">
+            <!-- Navbar Start-->
+            <nav class="d-flex navbar navbar-expand-sm navbar-dark navbar-fixed-top bg-dark">
+                <div class="container-fluid d-flex justify-content-between">
+                    <a class="navbar-brand" href="/">Biblioteca</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID" aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div sec:authorize="isAuthenticated()" class="collapse navbar-collapse" id="navbarID">
+                        <div class="navbar-nav">
+
+                            <a class="nav-link active" aria-current="page" th:href="@{/editoriales}">Editoriales</a>
+
+                            <a class="nav-link active" aria-current="page" th:href="@{/autores}">Autores</a>
+
+                            <a class="nav-link active" aria-current="page" th:href="@{/libros}">Libros</a>
+
+                            <a sec:authorize="hasAnyRole('ADMIN')" class="nav-link active" aria-current="page" th:href="@{/clientes}">Clientes</a>
+
+                            <a class="nav-link active justify-content-end" aria-current="page" th:href="@{/prestamos}">Préstamos</a>
+
+                        </div>
+                        <div  class="justify-content-end collapse navbar-nav navbar-collapse bg-dark " id="navbarID">
+                            <a sec:authorize="!isAuthenticated()" class="nav-link active" th:href="@{login}">Login</a>
+                            <a sec:authorize="!isAuthenticated()"class="nav-link active" aria-current="page" th:href="@{registro}">Registro</a>
+                            <span sec:authorize="isAuthenticated()" class="nav-link active" th:if="${session.customersession != null}" th:text="${session.customersession.fullName}"></span>                            
+                            <a sec:authorize="isAuthenticated()" class="nav-link active " aria-current="page" th:href="@{/logout}">Cerrar Sesión</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-        <!-- Navbar End-->
-    </div>
-</body>
+            </nav>
+            <!-- Navbar End-->
+        </div>
+    </body>
 
 </html>
+
