--- a/src/main/resources/templates/authors/author-form.html
+++ b/src/main/resources/templates/authors/author-form.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmnls:sec="http://www.thymeleaf.org/extras/spring-security">
 
-    <div th:insert="fragments/header-files :: head(title='Crear Autor')"></div>
+    <head th:replace="fragments/header-files :: head(title='Crear Autor')">
+        <link rel="stylesheet" href="../../static/styles.css" type="text/css"/>
+    </head>
 
 
     <body>
@@ -9,17 +11,17 @@
 
         <div class="container-fluid m-4 d-flex flex-column">
 
-            <form th:action="@{/autores/form}" th:object="${author}" method="POST">
+            <form class="form-block" th:action="@{/autores/form}" th:object="${author}" method="POST">
                 <h1 th:text="${author.id != null and !#strings.isEmpty(author.id) ? 'Editar Autor' : 'Nuevo Autor'}"></h1>
+                <div class="input-group mb-3 w-25">
+                    <input class="form-control" type="text" th:field="*{name}" th:value="${author.name}"
+                           placeholder="Escribí el nombre del autor" autofocus />
+                    <input class="form-control" type="hidden" th:field="*{id}" th:value="${author.id}" />
+                    <input class="form-control" type="hidden" th:field="*{active}" th:value="${author.active}" />
+                    <button th:text="${author.id != null && !#strings.isEmpty(author.id) ? 'Guardar' : 'Crear'}"
+                            class="btn btn-sm btn-info" type="submit"></button>
 
-                <input class="form-control" type="text" th:field="*{name}" th:value="${author.name}"
-                       placeholder="Escribí el nombre del autor" autofocus />
-                <input class="form-control" type="hidden" th:field="*{id}" th:value="${author.id}" />
-                <input class="form-control" type="hidden" th:field="*{active}" th:value="${author.active}" />
-                <button th:text="${author.id != null && !#strings.isEmpty(author.id) ? 'Guardar' : 'Crear'}"
-                        class="btn btn-sm btn-info" type="submit"></button>
-
-
+                </div>
                 <p class="text-danger" th:text="${errorMessage}"></p>
             </form>
         </div>
