General views refactor and creation of customer profile view

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmnls:sec="http://www.thymeleaf.org/extras/spring-security">
-    <div th:replace="fragments/header-files :: head(title='Ingresa a la Biblioteca')">
-        <link href="/styles.css" rel="stylesheet" />
-    </div>
-    <body>
-        <div th:replace="fragments/navbar :: navbar"></div>
+<div th:replace="common/header-files :: head(title='Ingresa a la Biblioteca')">
+    <link href="/styles.css" rel="stylesheet" />
+</div>
 
-        <form class="text-center form-block" th:action="@{/logincheck}" method="POST">
+<body>
+    <div th:replace="common/navbar :: navbar"></div>
 
-            <h1> Bienvenido a la Biblioteca</h1>
+    <form class="text-center form-block" th:action="@{/logincheck}" method="POST">
 
-            <input class="rounded" type="email" name="email" placeholder="Email">
+        <h1> Bienvenido a la Biblioteca</h1>
 
-            <input class="rounded" type="password" name="password" placeholder="Contraseña">
+        <input class="rounded" type="email" name="email" placeholder="Email">
 
-            <button class="btn btn-sm btn-info" type="submit">Ingresar</button>
-            <p class="text-danger" th:if="${error}" th:text="${error}">Credenciales inválidas</p>
-        </form>
-    </body>
+        <input class="rounded" type="password" name="password" placeholder="Contraseña">
+
+        <button class="btn btn-sm btn-info" type="submit">Ingresar</button>
+        <p class="text-danger" th:if="${error}" th:text="${error}">Credenciales inválidas</p>
+    </form>
+</body>
+
 </html>
-
-
