--- a/src/main/resources/templates/authors/form.html
+++ b/src/main/resources/templates/authors/form.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmnls:sec="http://www.thymeleaf.org/extras/spring-security">
 
-    <head th:replace="fragments/header-files :: head(title='Crear Autor')">
+    <head th:replace="common/header-files :: head(title='Crear Autor')">
         <link rel="stylesheet" href="../../static/styles.css" type="text/css"/>
     </head>
 
 
     <body>
-        <div th:replace="fragments/navbar :: navbar"></div>
+        <div th:replace="common/navbar :: navbar"></div>
 
         <div class="container-fluid m-4 d-flex flex-column">
 
