--- a/src/main/resources/templates/authors/list.html
+++ b/src/main/resources/templates/authors/list.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmnls:sec="http://www.thymeleaf.org/extras/spring-security">
 
-    <head th:insert="fragments/header-files :: head(title='Autores')">
+    <head th:insert="common/header-files :: head(title='Autores')">
         <link rel="stylesheet" href="../../static/styles.css" type="text/css"/>
 
     </head>
 
     <body>
-        <div th:replace="fragments/navbar :: navbar"></div>
+        <div th:replace="common/navbar :: navbar"></div>
         <div class="container p-4 d-flex flex-column">
             <div class="d-flex justify-content-between mb-3">
                 <div>
