--- a/src/main/resources/templates/customers/list.html
+++ b/src/main/resources/templates/customers/list.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmnls:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<div th:replace="fragments/header-files :: head(title='Clientes')"></div>
+<div th:replace="common/header-files :: head(title='Clientes')"></div>
 
 
 <body>
 
-    <div th:replace="fragments/navbar :: navbar"></div>
+    <div th:replace="common/navbar :: navbar"></div>
 
     <div class="container p-4 d-flex flex-column">
         <div class="d-flex justify-content-between mb-3">
@@ -41,7 +41,7 @@
 
             <tbody th:each="customer: ${customers}">
                 <tr>
-                    <td th:text="${customer.name + ' ' + customer.lastName}" />
+                    <td th:text="${customer.fullName}" />
                     <td th:text="${customer.idNumber}" />
                     <td class="text-center" th:text="${customer.phoneNumber}" />
                     <td class="text-center">
