--- a/src/main/resources/templates/loans/list.html
+++ b/src/main/resources/templates/loans/list.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmnls:sec="http://www.thymeleaf.org/extras/spring-security">
 
-    <div th:replace="fragments/header-files :: head(title='Préstamos')"></div>
+    <div th:replace="common/header-files :: head(title='Préstamos')"></div>
 
 
     <body>
 
-        <div th:replace="fragments/navbar :: navbar"></div>
+        <div th:replace="common/navbar :: navbar"></div>
 
         <div class="container p-4 d-flex flex-column">
             <div class="d-flex justify-content-between mb-3">
