--- a/src/main/resources/templates/publishers/list.html
+++ b/src/main/resources/templates/publishers/list.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmnls:sec="http://www.thymeleaf.org/extras/spring-security">
 
-    <head th:insert="fragments/header-files :: head(title='Editoriales')">
+    <head th:insert="common/header-files :: head(title='Editoriales')">
         <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"-->
         <!--integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />-->
     </head>
 
     <body>
 
-        <div th:replace="fragments/navbar :: navbar"></div>
+        <div th:replace="common/navbar :: navbar"></div>
         <div class="container p-4 d-flex flex-column">
             <div class="d-flex justify-content-between mb-3">
                 <div>
