--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmnls:sec="http://www.thymeleaf.org/extras/spring-security">
 
-    <head th:replace="fragments/header-files :: head(title='Libros')">
+    <head th:replace="common/header-files :: head(title='Libros')">
     </head>
 
     <body>
-        <div th:replace="fragments/navbar :: navbar"></div>
+        <div th:replace="common/navbar :: navbar"></div>
         <div class="container p-4 d-flex flex-column">
             <div class="d-flex justify-content-between mb-1">
                 <div>
